Refactor JoyCon class and update documentation links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <button id="connect">Connect To Joycon</button>
     <p id="CurrentData"></p>
+    <canvas id="canvas" width="500" height="500"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
